@startuml

' Интерфейсы
interface IToDo {
    +Id : Guid
    +Title : string
    +Description : string
    +CompletionDatePlanned : DateTimeOffset?
    +CompletionDateActual : DateTimeOffset?
    +State : IToDoState
    +Owner : IToDoOwner
    +IsCompleted : bool
    +CompleteAsync() : Task
    +Clone() : IToDo
    +UpdateFromDataAsync(ToDoUpdateDto) : Task
    +GetData() : ToDoGetDto
}

interface IToDoOwner {
    +SaveAsync(IToDo) : Task
    +GetToDoByIdAsync(Guid) : Task<IToDo?>
    +GetAllToDosAsync() : Task<IEnumerable<IToDo>>
    +RemoveToDoAsync(Guid) : Task
}

interface IToDoRepository {
    +SaveAsync(IToDo) : Task
    +GetByIdAsync(Guid) : Task<IToDo?>
    +GetAllAsync() : Task<IEnumerable<IToDo>>
    +RemoveAsync(Guid) : Task
}

interface IToDoEntityMapper {
    +ToDomainModel(PostgreToDoEntity) : IToDo
    +ToEntity(IToDo) : PostgreToDoEntity
}

interface IToDoState {
    +Type : ToDoStateType
    +CompleteAsync(IToDo) : Task
}

interface IToDoService {
    +GetToDoByIdAsync(Guid) : Task<ToDoGetDto?>
    +GetAllToDosAsync() : Task<IEnumerable<ToDoGetDto>>
    +AddToDoAsync(ToDoAddDto) : Task<ToDoGetDto>
    +UpdateToDoAsync(Guid, ToDoUpdateDto) : Task
    +RemoveToDoAsync(Guid) : Task
    +CompleteToDoAsync(Guid) : Task
}

' Классы
class ToDoOwner {
    -toDoRepository : IToDoRepository
}

class PostgreToDoRepository {
    -dbContext : AppDbContext
    -entityMapper : IToDoEntityMapper
}

class ToDoEntityMapper {
    +ToDomainModel(PostgreToDoEntity) : IToDo
    +ToEntity(IToDo) : PostgreToDoEntity
}

class ToDo {
    -Id : Guid
    -Title : string
    -Description : string
    -CompletionDatePlanned : DateTimeOffset?
    -CompletionDateActual : DateTimeOffset?
    -State : IToDoState
    -Owner : IToDoOwner
    +IsCompleted : bool
    +Owner {get/set} : IToDoOwner
    +CompleteAsync() : Task
    +Clone() : IToDo
    +UpdateFromDataAsync(ToDoUpdateDto) : Task
    +GetData() : ToDoGetDto
}

class PostgreToDoEntity {
    +Id : Guid
    +Title : string
    +Description : string
    +CompletionDatePlanned : DateTimeOffset?
    +CompletionDateActual : DateTimeOffset?
    +StateType : ToDoStateType
}

class ToDoService {
    -toDoOwnerFactory : IToDoOwnerFactory
}

' Отношения реализации
ToDoOwner ..|> IToDoOwner
PostgreToDoRepository ..|> IToDoRepository
ToDoEntityMapper ..|> IToDoEntityMapper
ToDo ..|> IToDo
ToDoService ..|> IToDoService

' Агрегация и зависимости
ToDoOwner "1" *-- "1" IToDoRepository : использует

PostgreToDoRepository "1" *-- "1" IToDoEntityMapper : использует маппер
PostgreToDoRepository "1" *-- "1" AppDbContext : использует контекст

ToDo "1" --> "0..1" IToDoOwner : имеет ссылку на Owner
ToDo "1" --> "1" IToDoState : делегирует поведение

IToDoState ..> ToDo : принимает в CompleteAsync

ToDoEntityMapper ..> ToDo : создаёт из сущности
ToDoEntityMapper ..> PostgreToDoEntity : создаёт из домена

PostgreToDoRepository ..> PostgreToDoEntity : работает с EF Core сущностью
PostgreToDoRepository ..> ToDoEntityMapper : преобразует данные

ToDoService "1" *-- "1" IToDoOwnerFactory : использует фабрику
ToDoService ..> IToDoOwner : через factory.Create()
ToDoService ..> IToDo : для получения данных и обновления
ToDoService ..> ToDo : использует методы доменной модели

' Пояснения
note right of ToDo::CompleteAsync
    Делегирует выполнение
    текущему состоянию (State.CompleteAsync)
end note

note right of IToDoState::CompleteAsync
    Изменяет состояние задачи,
    например: устанавливает CompletionDateActual
    и переключает State на Completed.
end note

note right of PostgreToDoRepository::SaveAsync
    При сохранении:
    - Если Id пуст — вызывает AddAsync
    - Иначе — UpdateAsync
    Перед сохранением использует маппер
end note

note right of ToDoEntityMapper
    Преобразует между:
    - PostgreToDoEntity (EF Core модель)
    - IToDo (доменная модель)
    Обеспечивает чистоту слоя данных
end note

note right of ToDoService
    Основной сервис для бизнес-логики.
    Не работает напрямую с репозиторием —
    использует IToDoOwner через фабрику.
end note

@enduml